--- a/css/blocks/best-section.css
+++ b/css/blocks/best-section.css
@@ -25,6 +25,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    max-width: 300px;
 }
 
 .best-section__item-img {
