--- a/css/blocks/main-section.css
+++ b/css/blocks/main-section.css
@@ -55,6 +55,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: fixed;
+    right: 25%;
 }
 
 .main__item {
