--- a/css/blocks/main-section.css
+++ b/css/blocks/main-section.css
@@ -1,17 +1,20 @@
-.main-section {
+.wrap-main-section {
     width: 100%;
     height: 100vh;
-    background: #3b4043;
     background: url("../../img/back/main-bg.png")  no-repeat;
     background-size: cover;
+}
+
+.main-section {
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 .container {
     align-items: center;
     margin: 0 auto;
-    width: 980px;
+    max-width: 980px;
 }
 
 .main {
