--- a/css/blocks/main-section.css
+++ b/css/blocks/main-section.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 80vh;
 }
 
 .container {
@@ -59,7 +60,7 @@
     flex-direction: column;
     align-items: center;
     position: fixed;
-    right: 25%;
+    right: 5%;
 }
 
 .main__item {
@@ -82,6 +83,9 @@
     display: flex;
     margin-top: 95px;
     justify-content: center;
+    position: fixed;
+    bottom: 5%;
+    right: 50%;
 }
 
 .main__scroll-logo {
