--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -15,6 +15,10 @@
     padding-right: 10px;
 }
 
+.header__item:hover {
+    text-decoration: underline;
+}
+
 .header__item {
     margin-left: 30px;
 }
@@ -39,6 +43,10 @@
     text-transform: uppercase;
     border: #e45028;
     border-radius: 5px;
+}
+
+.header__button:hover {
+    cursor: pointer;
 }
 
 .logo {
