--- a/old styles/blocks/header.css
+++ b/old styles/blocks/header.css
@@ -32,7 +32,7 @@
     font-weight: 500;
 }
 
-.header__button {
+.header__btn {
     font-family: 'Ubuntu-Medium', Arial, serif;
     margin-left: 15px;
     width: 100px;
@@ -45,7 +45,7 @@
     border-radius: 5px;
 }
 
-.header__button:hover {
+.header__btn:hover {
     cursor: pointer;
 }
 
