--- a/scss/layout/side-nav.scss
+++ b/scss/layout/side-nav.scss
@@ -1,3 +1,12 @@
+.side-nav__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 10%;
+  right: 1%;
+}
+
 .side-nav__item {
   margin-bottom: 15px;
 }
