--- a/scss/section/header.scss
+++ b/scss/section/header.scss
@@ -1,6 +1,6 @@
 .header {
   position: absolute;
-  left: 16%;
+  left: 20%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,7 +24,8 @@
     text-decoration: underline;
   }
 
-  &:first-child {
+  &:first-child:before {
+    display: none;
   }
 }
 
