--- a/scss/section/header.scss
+++ b/scss/section/header.scss
@@ -1,9 +1,10 @@
 .header {
   position: absolute;
-  left: 20%;
+  min-width: 940px;
+  right: 27%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .header__list {
@@ -56,5 +57,5 @@
 }
 
 .logo {
-  margin-right: 200px;
+  margin-right: auto;
 }
