--- a/scss/layout/bot-scroll.scss
+++ b/scss/layout/bot-scroll.scss
@@ -1,7 +1,7 @@
 .bot-scroll__link-next {
   display: flex;
   justify-content: center;
-  position: fixed;
+  position: absolute;
   bottom: 5%;
   right: 50%;
 }
