--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "section/header";
 @import "section/natural";
 @import "section/best";
+@import "section/team";
 @import "section/staff";
 
 
