--- a/css/main.css
+++ b/css/main.css
@@ -79,21 +79,8 @@ ul {
   min-height: 650px; }
 
 .section {
-  height: 100vh; }
-
-.wrap__header {
-  width: 950px;
-  top: 1px;
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
+  height: 100vh;
+  width: 100%; }
 
 .container {
   width: 940px;
@@ -126,6 +113,15 @@ ul {
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row; }
+
+.team__container {
+  background-color: #2f3234;
+  opacity: .9;
+  width: 50vw;
+  height: 100vh;
+  -webkit-box-pack: normal;
+  -ms-flex-pack: normal;
+  justify-content: normal; }
 
 .title {
   font-family: 'gagalin', Arial, serif;
@@ -183,7 +179,8 @@ ul {
   background: url("../img/decor/arrow-scroll.png") center center no-repeat; }
 
 .header {
-  width: 100%; }
+  width: 100%;
+  position: absolute; }
 
 .header__list {
   display: -webkit-box;
@@ -328,10 +325,21 @@ ul {
 
 .team {
   background: url("../img/back/team.png");
-  background-size: cover; }
+  background-size: cover;
+  position: relative; }
 
 .team__description {
-  position: absolute; }
+  position: absolute;
+  top: 1px;
+  right: 0;
+  width: 50vw; }
+
+.team__tittle {
+  margin-top: 113px;
+  margin-bottom: 45px; }
+
+.team__item {
+  margin-bottom: 35px; }
 
 .team__link {
   font-family: 'gagalin', Arial, serif;
@@ -344,18 +352,31 @@ ul {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  overflow: hidden; }
+  overflow: hidden;
+  margin-right: 10px; }
 
 .team__link-more {
-  font-family: 'Ubuntu-Medium', Arial, serif;
+  font-family: 'Ubuntu-Light', Arial, serif;
   font-weight: 300;
   font-size: 14px;
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 0;
+  overflow: hidden; }
+
+.team__link-content {
+  max-width: 210px; }
 
 .team__more-tittle {
+  font-family: 'Ubuntu-B', Arial, Serif;
   font-weight: 700; }
 
 .staff {
