--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 @import "section/natural";
 @import "section/best";
 @import "section/team";
+@import "section/menu";
 @import "section/staff";
 
 
