--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -31,6 +31,11 @@
   flex-direction: row;
 }
 
+.menu__container {
+  align-items: normal;
+  margin: 0;
+}
+
 .team__container {
   background-color: $black;
   opacity: .9;
