--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -1,6 +1,7 @@
 .wrapper {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .maincontent {
@@ -34,6 +35,10 @@
 .menu__container {
   align-items: normal;
   margin: 0;
+}
+
+.footer__container {
+  flex-direction: row;
 }
 
 .team__container {
